sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: type mismatch;
 found   : Double
 required: Int
			if(isSmaller(i+1,i)){
                                      ^AlgCombSort:12: error: type mismatch;
 found   : Double
 required: Int
				swap(i,i+1);
                                     ^AlgCombSort:15: error: value ++ is not a member of Double
			i++;	
                         ^